--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-material-dropdown",
+  "name": "@anasmasood94/react-native-material-dropdown",
   "version": "0.11.1",
   "license": "BSD-3-Clause",
   "author": "Alexander Nazarov <n4kz@n4kz.com>",
@@ -21,7 +21,7 @@
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/n4kz/react-native-material-dropdown.git"
+    "url": "git://github.com/anasmasood94/react-native-material-dropdown.git"
   },
 
   "peerDependencies": {
@@ -43,6 +43,6 @@
     "prop-types": "^15.5.9",
     "react-native-material-buttons": "^0.5.0",
     "react-native-material-ripple": "^0.8.0",
-    "react-native-material-textfield": "git://github.com/anasmasood94/react-native-material-textfield"
+    "@anasmasood94/react-native-material-textfield": "0.16.1"
   }
 }
